--- a/style.css
+++ b/style.css
@@ -17,12 +17,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 */
 
 
-h1{
-    color: red;
-}
-
-
- html {
+html {
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
   }
@@ -49,7 +44,8 @@ h1{
     height: 0; /* 1 */
     overflow: visible; /* 2 */
   }
-
+  
+  
   pre {
     font-family: monospace, monospace; /* 1 */
     font-size: 1em; /* 2 */
@@ -61,9 +57,7 @@ h1{
   a {
     background-color: transparent;
   }
-  
- 
-  
+
   abbr[title] {
     border-bottom: none; /* 1 */
     text-decoration: underline; /* 2 */
@@ -93,14 +87,16 @@ h1{
     font-size: 80%;
   }
 
-sub,
+
+  
+  sub,
   sup {
     font-size: 75%;
     line-height: 0;
     position: relative;
     vertical-align: baseline;
   }
-  
+
   sub {
     bottom: -0.25em;
   }
@@ -140,7 +136,7 @@ sub,
   select { /* 1 */
     text-transform: none;
   }
-  
+
   button,
   [type="button"],
   [type="reset"],
@@ -184,7 +180,7 @@ sub,
     white-space: normal; /* 1 */
   }
 
-progress {
+ progress {
     vertical-align: baseline;
   }
   
@@ -229,14 +225,14 @@ progress {
     font: inherit; /* 2 */
   }
   
-    
+
+
+  
   details {
     display: block;
   }
   
- 
-  
-  summary {
+ summary {
     display: list-item;
   }
 
@@ -276,7 +272,6 @@ progress {
 ::before {
     box-sizing: border-box;
 }
-
 body{
     font-family: 'Poppins', sans-serif;
     font: normal, 21px/2.1rem, 'Poppins', sans-serif;
@@ -291,6 +286,7 @@ h2{
     font-weight: bold;
     text-transform: uppercase;
 }
+
 h3{
     font-size: 36px;
     line-height: 3.6rem;
@@ -314,7 +310,6 @@ a{
     color: var( --wp-gray1 );
     text-decoration: none;
 }
-
 a:hover,
 a:visited{
     color: #2e0974;
@@ -323,10 +318,6 @@ img {
     max-width: 100%;
     height: auto;
 }
-
-
-/* Containers */
-
 
 .container {
     width: 100%;
@@ -363,3 +354,897 @@ img {
     }
 }
 
+/************** HOME PAGE *****************/
+
+
+/* Top Bar Section */
+.top-bar{ 
+    background: #ffffff; 
+    color: #9c7b38; 
+    padding: 15px 0; 
+}
+.top-bar .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.searchbox input[type="text"]{
+    padding: 7px 10px;
+    border: 1px solid #C6C6C6;
+}
+.searchbox input[type="submit"]{
+    padding: 9px 10px;
+    background: #000000;
+    color: #FFFFFF;
+    border: none;
+}
+@media (max-width: 768px) {
+    .searchbox {
+        display: none;
+    }
+    .top-bar .container{
+        justify-content: center;
+    }
+}
+
+.menu-area {
+    background: var( --wp-gray2 );
+}
+.main-menu {
+    /* height: 55px;
+    display: flex;
+    justify-content: center; */
+    height: auto;
+    background-color: #ffffff;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+    z-index: 10;
+    position: relative;
+}
+.main-menu ul {
+    /* margin: 0;
+    padding-left: 0; */
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 30px;
+}
+.main-menu ul li {
+    /* display: inline-block;
+    line-height: 55px; */
+    position: relative;
+}
+.main-menu ul li.current_page_item > a{
+    font-weight: bold;
+}
+
+.main-menu ul li a {
+    /* color: #000000;
+    padding: 0 30px;
+    text-decoration: none;
+    display: block; */
+    color: #333;
+    font-weight: 500;
+    text-decoration: none;
+    padding: 10px 15px;
+    display: block;
+    border-radius: 5px;
+    transition: background 0.3s, color 0.3s;
+}
+.main-menu ul li a:hover,
+.main-menu ul li a:active
+{
+    color: var( --wp-gray1 );
+    transition: .5s all;
+}
+.main-menu ul li a:focus + ul
+{
+    display: block;
+}
+.main-menu li.menu-item-has-children::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: calc( 50% - 6px);
+    width: 0px;
+    height: 0px;
+    border-top: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-bottom: 6px solid #000000;
+    border-left: 6px solid transparent;
+}
+
+.main-menu ul.sub-menu {
+    position: absolute;
+    padding-left: 0;
+    background-color: #000000;
+    z-index: 1;
+    text-align: left;
+    display: none;
+}
+.main-menu ul .menu-item-has-children:hover>ul,
+.main-menu ul .menu-item-has-children:focus+ul {
+    display: block
+}
+.main-menu ul.sub-menu li {
+    width: max-content;
+}
+.main-menu ul.sub-menu a {
+    color: #FFFFFF;
+}
+.menu-icon,
+.check-button {
+    cursor: pointer;
+    display: none;
+}
+.menu-icon .bar1, 
+.menu-icon .bar2, 
+.menu-icon .bar3 {
+    width: 28px;
+    height: 3px;
+    background-color: #333;
+    margin: 5px 0;
+    transition: 0.4s;
+}
+@media (max-width: 767px){
+    .menu-icon,
+    .check-button {
+        display: block;
+    }
+  }
+
+     .check-button{
+        border: none;
+        background: transparent;
+        height: 55px;
+    }
+    .main-menu ul{
+        position: absolute;
+        width: 100%;
+        background: #000000;
+        left: -999px;
+        text-align: left;
+        transition: all cubic-bezier(.79,.14,.15,.86) .5s;
+        padding: 0;
+        margin: 0;
+        z-index: 1;
+    }
+    .main-menu ul:not(.sub-menu){
+        margin-top: 55px;
+    }
+    .main-menu ul li{
+        display: block;
+        margin: 15px 0;
+        line-height: 30px;
+    }
+    .main-menu ul li a {
+        color: #FFFFFF;
+    }
+    .main-menu ul.sub-menu{
+        position: relative;
+        top: 0;
+        margin-left: 30px;
+        display: block;
+        width: auto;
+    }
+    .main-menu ul.sub-menu a{
+        color: var( --wp-gray1 );
+    } 
+
+        .show-dropdown{
+        left: 0 !important;
+    }  
+    .animate-button .bar1 {
+        -webkit-transform: rotate(-45deg) translate(-4px, 4px);
+        transform: rotate(-45deg) translate(-4px, 4px);
+    }
+    .animate-button .bar2 {opacity: 0;}
+    .animate-button .bar3 {
+        -webkit-transform: rotate(45deg) translate(-7px, -7px);
+        transform: rotate(45deg) translate(-7px, -7px);
+    }
+
+
+
+/* Hero */
+.hero{
+    background-size: cover;
+    background-position: center center;
+    color: #FFFFFF;
+    text-align: center;
+}
+.hero-items{
+    padding: var( --wp-light-padding );
+}
+.hero .overlay{
+    background: rgb(0 0 0 / 27%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.hero .hero-items h1{
+    margin-top: 0;
+    font-weight: normal;
+}
+
+.hero .hero-items a{
+    color: #FFFFFF;
+    padding: 15px 25px;
+    display: inline-block;
+    background: var( --wp-light-blue );
+    margin: 20px 0 0;
+}
+.hero .hero-items a:hover{
+    background: var( --wp-yellow );
+    transition: .5s all;
+}
+
+
+/* Services */
+.services{ 
+    background: #89d0ce; 
+    padding: var( --wp-big-padding ); 
+    color: #ffffff; 
+}
+.services .container{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+}
+.services .container > * {
+    flex: 1 1 250px;
+}
+.services-item{
+    padding: var(--wp-light-padding);
+}
+.services-item p{
+    margin-bottom: 40px;
+}
+.services-item figure img{ 
+    background: var( --wp-black-blue );
+    padding: 15px; 
+}
+
+.services h2{ 
+    text-align: center;
+    position: relative;  
+}
+.services h2::after{
+    content: '';
+    position: absolute;
+    background-color: var( --wp-light-blue );
+    width: 35px;
+    height: 5px;
+    right: calc( 50% - 15px);
+    bottom: 0;
+}
+.services h4{
+    margin: 0;
+}
+@media (max-width: 768px) {
+    .services .container{
+        flex-direction: column;
+        padding: 0;
+    }
+    .services-item{
+        max-width: 100%;
+    }
+}
+
+
+/* Home Blog */
+.home .home-blog{
+    padding: var( --wp-big-padding );
+}
+.home-blog .container article:first-child{
+    grid-area: feat-item;
+}
+.home-blog .container{
+    display: grid;
+    grid-template-areas: 'feat-item feat-item';
+    grid-gap: 25px;
+}
+.home .home-blog h2{ 
+    text-align: center;
+    position: relative;  
+}
+
+.home .home-blog h2::after{
+    content: '';
+    position: absolute;
+    background-color: var( --wp-light-blue );
+    width: 35px;
+    height: 5px;
+    right: calc( 50% - 15px);
+    bottom: 0;
+}
+.home .home-blog .latest-news{ 
+    text-align: center; 
+}
+.home .home-blog .col-12 .latest-news{  
+    margin-bottom: 40px;
+}
+.home .home-blog .latest-news img{ 
+    float: none !important;
+    margin: 0 0 25px 0 !important;
+}
+.home .home-blog .latest-news h3{ 
+    color: #000000;
+    margin: 0; 
+    line-height: 2.6rem;
+}
+.home .home-blog .meta-info p{ 
+    font-weight: bold; 
+    margin-bottom: 0; 
+}
+.home .home-blog .meta-info p:last-child{ 
+    margin-top: 5px; 
+}
+.home .home-blog span, 
+.home .home-blog span a{ 
+    color: var( --wp-gray1 ); 
+    font-weight: normal; 
+    text-decoration: none;
+    margin: 0 2px 0 0; 
+}
+@media (max-width: 768px) {
+    .home-blog .container{
+        display: block;
+    }
+}
+
+footer{ 
+    background: var( --wp-deep-gray );
+    padding: 15px 0; 
+    color: #FFFFFF; 
+}
+footer .container .row{
+    align-items: center;
+}
+
+
+/* Footer - Footer Menu */
+.site-footer .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.site-footer .copyright p{
+    margin: 0;
+}
+.footer-menu ul{ 
+    list-style: none; 
+    padding: 0; 
+    margin: 0; 
+}
+.footer-menu ul li{ 
+    display: inline;  
+    margin: 0 15px 0 0;
+}
+.footer-menu ul li:last-child{ 
+    margin: 0; 
+}
+.footer-menu ul li a{  
+    text-decoration: none;
+    color: #FFFFFF;
+}
+.footer-menu ul li.current_page_item a{ 
+    font-weight: bold; 
+}
+@media (max-width: 768px) {
+    .site-footer .container{
+        justify-content: safe;
+    }
+}
+@media (max-width: 575px) {
+    .site-footer .container{
+        flex-wrap: wrap;
+    }
+}
+
+.blog main .container,
+.archive main .container{
+    display: flex;
+}
+.blog .blog-items,
+.archive .archive-items{
+    padding: 0 15px 0 0;
+    flex: 1;
+}
+.blog .blog-items h2,
+.archive .blog-items h2{
+    margin-top: 0;
+}
+.blog article{
+    margin-bottom: 20px;
+}
+.blog aside,
+.archive aside{
+    padding: 25px;
+    background: var( --wp-gray2 );
+    height: 100%;
+    width: 30%;
+}
+@media screen and (max-width: 991px ) {
+    .blog aside,
+    .archive aside,
+    .blog .blog-items,
+    .archive .archive-items{
+        min-width: 100%;
+    }
+}
+.blog h1,
+.archive h1{
+    text-align: center;
+    margin-top: 0;
+    color:var(--wp-gray1);
+}
+.archive-description{
+    text-align: center;
+    max-width: 50%;
+    margin: 0 auto 30px auto;
+}
+
+.archive-description p{
+    font-size: 85%;
+}
+.home #primary > #main{
+    padding: 0;
+}
+#primary > #main{
+    padding: var(--wp-big-padding);
+}
+@media screen and (max-width: 991px ) {
+    #primary > #main{
+        padding: var(--wp-mobile-padding);
+    }
+}
+.meta-info p{
+    margin: 0;
+}
+.wp-post-image{ 
+    float: left; 
+    margin: 0 15px 10px 0; 
+}
+@media screen and (max-width: 550px ) {
+    .wp-post-image{ 
+        width: 100%; 
+    }
+}
+article{ 
+    display: inline-block;  
+    width: 100%; 
+}
+article.post h1,
+.search h1,
+.archive h1{
+    font-size: 50px;
+    line-height: 4.0rem;
+    margin-bottom: 15px;
+}
+article.post h2{
+    line-height: 3rem;
+    text-transform: none;
+}
+article h2{
+    line-height: 3rem;
+    margin-bottom: 10px;
+    text-transform: none;
+}
+article.post h3,
+article.post h4,
+article.post h5{
+    margin-bottom: 0;
+}
+
+.top-bar .container {
+   
+    justify-content: center;
+}
+
+
+
+.searchbox {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+.searchform {
+    width: 100%;
+    max-width: 800px;
+}
+.searchform div{
+    display: flex;
+    gap: 10px;
+    width: 100%;
+}
+.searchform input[type="text"] {
+    padding: 12px 15px;
+    border: 1px solid #C6C6C6;
+    font-size: 18px;
+    flex: 1; /* makes input take up remaining space */
+    border-radius: 5px;
+    width: 100%;
+}
+
+.searchform input[type="submit"] {
+    padding: 12px 20px;
+    font-size: 18px;
+    background: #000000;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.searchform input[type=text]{
+    
+    padding: 7px 10px;
+    border: 1px solid #C6C6C6;
+    /* max-width: 200px; */
+}
+.searchform input[type=submit]{
+    /* padding: 9px 15px; */
+    background: #000000;
+    color: #FFFFFF;
+    border: none;
+    cursor: pointer;
+}
+@media (max-width: 991px) {
+    .blog .container,
+    .archive .container{
+        flex-wrap: wrap;
+    }
+}
+
+
+/* Comments */
+#commentform input[type="submit"]{     
+    color: #FFFFFF;
+    padding: 15px 25px;
+    display: inline-block;
+    background: var( --wp-light-blue );
+    margin: 20px 0 0; 
+    border: none;
+}
+#commentform input[type="submit"]:hover{
+    background: var( --wp-yellow );
+    transition: .5s all;
+}
+
+#commentform label{
+    display: block;
+}
+#commentform label[for="wp-comment-cookies-consent"]{
+    display: inline;
+    margin-left: 5px;
+}
+#commentform input[type="text"],
+#commentform textarea{
+    padding: 7px 10px;
+    border: 1px solid #C6C6C6;
+    width: 100%;
+}
+.comments-area #reply-title{
+    border-top: 1px solid #ebebeb;
+    padding: 20px 0 0;
+}
+
+
+/* Pagination */
+.wptheme-pagination{
+    display: flex;
+    justify-content: space-between;
+}
+.pages{
+    margin-top: 20px;
+}
+.nav-links{
+    margin-top: 40px;
+}
+.nav-links .page-numbers{
+    padding: 10px 15px;
+    display: inline-block;
+    background: var( --wp-gray3 );
+}
+.nav-links .current{
+    background-color: #000000;
+    color: #ffffff;
+}
+.nav-links .next,
+.nav-links .prev{
+    background-color: transparent;
+}
+.nav-links .prev{
+    padding-left: 0;
+}
+
+.alignnone {
+    margin: 5px 20px 20px 0;
+}
+
+
+.aligncenter,
+div.aligncenter {
+    display: block;
+    margin: 5px auto 5px auto;
+}
+
+
+.alignright {
+    float:right;
+    margin: 5px 0 20px 20px;
+}
+
+
+.alignleft {
+    float: left;
+    margin: 5px 20px 20px 0;
+}
+
+
+a img.alignright {
+    float: right;
+    margin: 5px 0 20px 20px;
+}
+
+
+a img.alignnone {
+    margin: 5px 20px 20px 0;
+}
+
+
+a img.alignleft {
+    float: left;
+    margin: 5px 20px 20px 0;
+}
+
+
+a img.aligncenter {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.wp-caption {
+    background: #fff;
+    border: 1px solid #f0f0f0;
+    max-width: 96%; /* Image does not overflow the content area */
+    padding: 5px 3px 10px;
+    text-align: center;
+}
+
+
+.wp-caption.alignnone {
+    margin: 5px 20px 20px 0;
+}
+
+
+.wp-caption.alignleft {
+    margin: 5px 20px 20px 0;
+}
+
+
+.wp-caption.alignright {
+    margin: 5px 0 20px 20px;
+}
+
+
+.wp-caption img {
+    border: 0 none;
+    height: auto;
+    margin: 0;
+    max-width: 98.5%;
+    padding: 0;
+    width: auto;
+}
+
+
+.wp-caption p.wp-caption-text {
+    font-size: 11px;
+    line-height: 17px;
+    margin: 0;
+    padding: 0 4px 5px;
+}
+
+
+/* Text meant only for screen readers. */
+.screen-reader-text {
+    border: 0;
+    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: inset(50%);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute !important;
+    width: 1px;
+    word-wrap: normal !important; /* Many screen reader and browser combinations announce broken words as they would appear visually. */
+}
+
+
+.screen-reader-text:focus {
+    background-color: #eee;
+    clip: auto !important;
+    clip-path: none;
+    color: #444;
+    display: block;
+    font-size: 1em;
+    height: auto;
+    left: 5px;
+    line-height: normal;
+    padding: 15px 23px 14px;
+    text-decoration: none;
+    top: 5px;
+    width: auto;
+    z-index: 100000;
+    /* Above WP toolbar. */
+}
+
+
+.wptheme-slider {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    max-height: 500px;
+}
+
+
+.wptheme-slider .slides img {
+    width: 100%;
+    display: none;
+    transition: opacity 1s ease-in-out;
+}
+
+
+.wptheme-slider .slides img.active {
+    display: block;
+}
+
+
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+
+  #container{
+          background-color: black;
+          position: relative;
+          width:100%;
+          padding-top:50%;
+          max-height:100vh;
+          overflow:hidden;
+      }
+      #inner_container{
+          position:absolute;
+          left:0;
+          right:0;
+          top:0;
+          bottom:0;
+      }
+      #imgs_container{
+          width:100%;
+          height:100%;
+      }
+      .img_container{
+          position:absolute;
+          width:100%;
+          height:100%;
+          top:0%;
+          transition:left 0.3s;
+      }
+      .img_container > img{
+          width:100%;
+          height:100%;
+          object-fit:scale-down;
+      }
+      #overlay{
+          position:absolute;
+          left:0;
+          right:0;
+          top:0;
+          bottom:0;
+          background-color:rgba(200,200,200,0.2);
+      }
+
+      .overlay_button{
+          display:flex;
+          align-items:center;
+          justify-content:center;
+          position:absolute;
+          width:10%;
+          height:20%;
+          border-radius:50%;
+          font-size:3vw;
+          font-weight:bold;
+          background-color:#eded;
+          color:#333;
+          top:40%;
+      }
+      #left_button{
+          left:2.5%;
+      }
+      #right_button{
+          right:2.5%;
+      }
+
+
+      .contact-form {
+        max-width: 600px;
+        margin: 50px auto; /* Adds vertical and horizontal margin */
+        padding-top: 40px;  /* Adds space above the form */
+        padding-bottom: 40px; /* Adds space below the form */
+    }
+    
+ 
+.contact-form input,
+.contact-form textarea {
+    width: 100%;
+    margin-bottom: 25px;
+    padding: 12px 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 15px;
+    box-sizing: border-box;
+    transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+    border-color: #0073e6;
+    box-shadow: 0 0 5px rgba(0, 115, 230, 0.3);
+    outline: none;
+}
+    .contact-form button {
+        padding: 10px 20px;
+        background: #363b3f;
+        color: white;
+        border: none;
+        border-radius: 10px;    }
+    
+    .contact-intro {
+        font-size: 18px;
+        color: #444;
+        margin-bottom: 30px;
+        text-align: center;
+        line-height: 1.6;
+    }
+
+
+    .contact-form label {
+        display: block;
+        font-weight: bold;
+        margin-bottom: 8px;
+        color: #222;
+        font-size: 16px;
+    }
+
+
+    .contact-page h1 {
+            font-size: 36px;
+            color: var(--wp-gray1);
+            text-align: center;
+            margin-bottom: 25px;
+            text-transform: uppercase;
+            letter-spacing: 1px;        
+            border-bottom: 2px solid black;
+            padding-bottom: 10px; 
+        }
+    .general-template h1 {
+        font-size: 36px;
+        color: var(--wp-gray1);
+        text-align: center;
+        margin-bottom: 25px;
+        text-transform: uppercase; /* optional */
+        letter-spacing: 1px;        /* optional */
+        border-bottom: 2px solid black; /* optional underline */
+        padding-bottom: 10px;        /* space between title and underline */
+    }
+    
